fix icons and text align

--- a/app/styles/modals/_assignGroup.scss
+++ b/app/styles/modals/_assignGroup.scss
@@ -23,6 +23,7 @@
         width: calc(100% - 29px);
         padding-left: 4px;
         .group__expanded--number {
+            text-align: center;
             margin-top: 4px
         }
         .group__expanded--icon {
